Plots - manche Fehlerbalken komisch

--- a/Prohaupt.tex
+++ b/Prohaupt.tex
@@ -127,7 +127,7 @@
 
 \rule{\textwidth}{1pt}\\[0.5cm]
 {\huge \bfseries
-  Versuch Gravitationswaage\\[1.5ex]
+  Wechselstromwiderstände\\[1.5ex]
   Protokoll}\\[0.5cm]
 \rule{\textwidth}{1pt}
 
@@ -137,14 +137,10 @@
 \begin{tabular}{ll}
 Praktikant: &  Michael Lohmann\\
  &  Felix Kurtz\\
-% &  Kevin Lüdemann\\
-% &  Skrollan Detzler\\
  E-Mail: & m.lohmann@stud.uni-goettingen.de\\
  &  felix.kurtz@stud.uni-goettingen.de\\
-% &  kevin.luedemann@stud.uni-goettingen.de\\
-% &  skrollan.detzler@stud.uni-goettingen.de\\
- Betreuer: & Martin Ochmann\\
- Versuchsdatum: & 26.05.2014\\
+ Betreuer: & Björn Klaas\\
+ Versuchsdatum: & 08.09.2014\\
 \end{tabular}
 \end{Large}
 
@@ -175,6 +171,40 @@ Praktikant: &  Michael Lohmann\\
 
 \section{Auswertung}
 \label{sec:auswertung}
+\begin{figure}[!htb]
+	\centering
+	\input{messung1.tex}
+	\caption{Quadrat der Impedanz als Funktion der Kreisfrequenz}
+	\label{fig:messung1}
+\end{figure}
+
+\begin{figure}[!htb]
+	\centering
+	\input{messung2.tex}
+	\caption{Impedanz des Serienresonanzkreis als Funktion der Kreisfrequenz}
+	\label{fig:messung2}
+\end{figure}
+
+\begin{figure}[!htb]
+	\centering
+	\input{phase.tex}
+	\caption{Phasenverschiebung des Serienresonanzkreises}
+	\label{fig:phase}
+\end{figure}
+
+\begin{figure}[!htb]
+	\centering
+	\input{spannungen.tex}
+	\caption{Teilspannungen des Serienresonanzkreises}
+	\label{fig:teilU}
+\end{figure}
+
+\begin{figure}[!htb]
+	\centering
+	\input{messung3.tex}
+	\caption{Impedanz des Parallelkreises als Funktion der Kreisfrequenz}
+	\label{fig:messung3}
+\end{figure}
 
 \section{Diskussion}
 \label{sec:diskussion}
