--- a/spannungen.tex
+++ b/spannungen.tex
@@ -75,37 +75,35 @@
   \begin{picture}(7200.00,5040.00)%
     \gplgaddtomacro\gplbacktext{%
       \csname LTb\endcsname%
-      \put(1254,704){\makebox(0,0)[r]{\strut{} 0}}%
-      \put(1254,1213){\makebox(0,0)[r]{\strut{} 0.2}}%
-      \put(1254,1722){\makebox(0,0)[r]{\strut{} 0.4}}%
-      \put(1254,2231){\makebox(0,0)[r]{\strut{} 0.6}}%
-      \put(1254,2740){\makebox(0,0)[r]{\strut{} 0.8}}%
-      \put(1254,3249){\makebox(0,0)[r]{\strut{} 1}}%
-      \put(1254,3758){\makebox(0,0)[r]{\strut{} 1.2}}%
-      \put(1254,4267){\makebox(0,0)[r]{\strut{} 1.4}}%
-      \put(1254,4776){\makebox(0,0)[r]{\strut{} 1.6}}%
-      \put(1386,484){\makebox(0,0){\strut{} 0}}%
-      \put(1943,484){\makebox(0,0){\strut{} 1}}%
-      \put(2500,484){\makebox(0,0){\strut{} 2}}%
-      \put(3058,484){\makebox(0,0){\strut{} 3}}%
-      \put(3615,484){\makebox(0,0){\strut{} 4}}%
-      \put(4172,484){\makebox(0,0){\strut{} 5}}%
-      \put(4729,484){\makebox(0,0){\strut{} 6}}%
-      \put(5286,484){\makebox(0,0){\strut{} 7}}%
-      \put(5844,484){\makebox(0,0){\strut{} 8}}%
-      \put(6401,484){\makebox(0,0){\strut{} 9}}%
-      \put(6958,484){\makebox(0,0){\strut{} 10}}%
-      \put(484,2740){\rotatebox{90}{\makebox(0,0){\strut{}Quadrat der Impedanz [(k$\Omega )^2$]}}}%
-      \put(4172,154){\makebox(0,0){\strut{}Quadrat der Kreisfrequenz [(kHz)$^2$]}}%
+      \put(1122,704){\makebox(0,0)[r]{\strut{} 0}}%
+      \put(1122,1383){\makebox(0,0)[r]{\strut{} 10}}%
+      \put(1122,2061){\makebox(0,0)[r]{\strut{} 20}}%
+      \put(1122,2740){\makebox(0,0)[r]{\strut{} 30}}%
+      \put(1122,3419){\makebox(0,0)[r]{\strut{} 40}}%
+      \put(1122,4097){\makebox(0,0)[r]{\strut{} 50}}%
+      \put(1122,4776){\makebox(0,0)[r]{\strut{} 60}}%
+      \put(1254,484){\makebox(0,0){\strut{} 0}}%
+      \put(1967,484){\makebox(0,0){\strut{} 500}}%
+      \put(2680,484){\makebox(0,0){\strut{} 1000}}%
+      \put(3393,484){\makebox(0,0){\strut{} 1500}}%
+      \put(4106,484){\makebox(0,0){\strut{} 2000}}%
+      \put(4819,484){\makebox(0,0){\strut{} 2500}}%
+      \put(5532,484){\makebox(0,0){\strut{} 3000}}%
+      \put(6245,484){\makebox(0,0){\strut{} 3500}}%
+      \put(6958,484){\makebox(0,0){\strut{} 4000}}%
+      \put(484,2740){\rotatebox{90}{\makebox(0,0){\strut{}Spannung [V]}}}%
+      \put(4106,154){\makebox(0,0){\strut{}$\omega$ [Hz]}}%
     }%
     \gplgaddtomacro\gplfronttext{%
       \csname LTb\endcsname%
-      \put(3762,4603){\makebox(0,0)[r]{\strut{}Messwerte}}%
+      \put(5971,4603){\makebox(0,0)[r]{\strut{}$U$}}%
       \csname LTb\endcsname%
-      \put(3762,4383){\makebox(0,0)[r]{\strut{}Regressionsgerade}}%
+      \put(5971,4383){\makebox(0,0)[r]{\strut{}$U_{L+R}$}}%
+      \csname LTb\endcsname%
+      \put(5971,4163){\makebox(0,0)[r]{\strut{}$U_{C}$}}%
     }%
     \gplbacktext
-    \put(0,0){\includegraphics{messung1}}%
+    \put(0,0){\includegraphics{spannungen}}%
     \gplfronttext
   \end{picture}%
 \endgroup
