--- a/messung2.tex
+++ b/messung2.tex
@@ -75,37 +75,32 @@
   \begin{picture}(7200.00,5040.00)%
     \gplgaddtomacro\gplbacktext{%
       \csname LTb\endcsname%
-      \put(1254,704){\makebox(0,0)[r]{\strut{} 0}}%
-      \put(1254,1213){\makebox(0,0)[r]{\strut{} 0.2}}%
-      \put(1254,1722){\makebox(0,0)[r]{\strut{} 0.4}}%
-      \put(1254,2231){\makebox(0,0)[r]{\strut{} 0.6}}%
-      \put(1254,2740){\makebox(0,0)[r]{\strut{} 0.8}}%
-      \put(1254,3249){\makebox(0,0)[r]{\strut{} 1}}%
-      \put(1254,3758){\makebox(0,0)[r]{\strut{} 1.2}}%
-      \put(1254,4267){\makebox(0,0)[r]{\strut{} 1.4}}%
-      \put(1254,4776){\makebox(0,0)[r]{\strut{} 1.6}}%
+      \put(1254,704){\makebox(0,0)[r]{\strut{}-0.5}}%
+      \put(1254,1286){\makebox(0,0)[r]{\strut{} 0}}%
+      \put(1254,1867){\makebox(0,0)[r]{\strut{} 0.5}}%
+      \put(1254,2449){\makebox(0,0)[r]{\strut{} 1}}%
+      \put(1254,3031){\makebox(0,0)[r]{\strut{} 1.5}}%
+      \put(1254,3613){\makebox(0,0)[r]{\strut{} 2}}%
+      \put(1254,4194){\makebox(0,0)[r]{\strut{} 2.5}}%
+      \put(1254,4776){\makebox(0,0)[r]{\strut{} 3}}%
       \put(1386,484){\makebox(0,0){\strut{} 0}}%
-      \put(1943,484){\makebox(0,0){\strut{} 1}}%
-      \put(2500,484){\makebox(0,0){\strut{} 2}}%
-      \put(3058,484){\makebox(0,0){\strut{} 3}}%
-      \put(3615,484){\makebox(0,0){\strut{} 4}}%
-      \put(4172,484){\makebox(0,0){\strut{} 5}}%
-      \put(4729,484){\makebox(0,0){\strut{} 6}}%
-      \put(5286,484){\makebox(0,0){\strut{} 7}}%
-      \put(5844,484){\makebox(0,0){\strut{} 8}}%
-      \put(6401,484){\makebox(0,0){\strut{} 9}}%
-      \put(6958,484){\makebox(0,0){\strut{} 10}}%
-      \put(484,2740){\rotatebox{90}{\makebox(0,0){\strut{}Quadrat der Impedanz [(k$\Omega )^2$]}}}%
-      \put(4172,154){\makebox(0,0){\strut{}Quadrat der Kreisfrequenz [(kHz)$^2$]}}%
+      \put(2083,484){\makebox(0,0){\strut{} 500}}%
+      \put(2779,484){\makebox(0,0){\strut{} 1000}}%
+      \put(3476,484){\makebox(0,0){\strut{} 1500}}%
+      \put(4172,484){\makebox(0,0){\strut{} 2000}}%
+      \put(4869,484){\makebox(0,0){\strut{} 2500}}%
+      \put(5565,484){\makebox(0,0){\strut{} 3000}}%
+      \put(6262,484){\makebox(0,0){\strut{} 3500}}%
+      \put(6958,484){\makebox(0,0){\strut{} 4000}}%
+      \put(484,2740){\rotatebox{90}{\makebox(0,0){\strut{}Impedanz [$\Omega$]}}}%
+      \put(4172,154){\makebox(0,0){\strut{}Kreisfrequenz [Hz]}}%
     }%
     \gplgaddtomacro\gplfronttext{%
       \csname LTb\endcsname%
-      \put(3762,4603){\makebox(0,0)[r]{\strut{}Messwerte}}%
-      \csname LTb\endcsname%
-      \put(3762,4383){\makebox(0,0)[r]{\strut{}Regressionsgerade}}%
+      \put(5971,4603){\makebox(0,0)[r]{\strut{}Messwerte}}%
     }%
     \gplbacktext
-    \put(0,0){\includegraphics{messung1}}%
+    \put(0,0){\includegraphics{messung2}}%
     \gplfronttext
   \end{picture}%
 \endgroup
