--- a/phase.tex
+++ b/phase.tex
@@ -75,33 +75,32 @@
   \begin{picture}(7200.00,5040.00)%
     \gplgaddtomacro\gplbacktext{%
       \csname LTb\endcsname%
-      \put(1254,704){\makebox(0,0)[r]{\strut{}-120}}%
-      \put(1254,1074){\makebox(0,0)[r]{\strut{}-100}}%
-      \put(1254,1444){\makebox(0,0)[r]{\strut{}-80}}%
-      \put(1254,1815){\makebox(0,0)[r]{\strut{}-60}}%
-      \put(1254,2185){\makebox(0,0)[r]{\strut{}-40}}%
-      \put(1254,2555){\makebox(0,0)[r]{\strut{}-20}}%
-      \put(1254,2925){\makebox(0,0)[r]{\strut{} 0}}%
-      \put(1254,3295){\makebox(0,0)[r]{\strut{} 20}}%
-      \put(1254,3665){\makebox(0,0)[r]{\strut{} 40}}%
-      \put(1254,4036){\makebox(0,0)[r]{\strut{} 60}}%
-      \put(1254,4406){\makebox(0,0)[r]{\strut{} 80}}%
-      \put(1254,4776){\makebox(0,0)[r]{\strut{} 100}}%
-      \put(1386,484){\makebox(0,0){\strut{} 0}}%
-      \put(2083,484){\makebox(0,0){\strut{} 500}}%
-      \put(2779,484){\makebox(0,0){\strut{} 1000}}%
-      \put(3476,484){\makebox(0,0){\strut{} 1500}}%
-      \put(4172,484){\makebox(0,0){\strut{} 2000}}%
-      \put(4869,484){\makebox(0,0){\strut{} 2500}}%
-      \put(5565,484){\makebox(0,0){\strut{} 3000}}%
-      \put(6262,484){\makebox(0,0){\strut{} 3500}}%
-      \put(6958,484){\makebox(0,0){\strut{} 4000}}%
-      \put(484,2740){\rotatebox{90}{\makebox(0,0){\strut{}$\varphi$ [Grad]}}}%
-      \put(4172,154){\makebox(0,0){\strut{}$\omega$ [Hz]}}%
+      \put(946,704){\makebox(0,0)[r]{\strut{}-2}}%
+      \put(946,1213){\makebox(0,0)[r]{\strut{}-1.5}}%
+      \put(946,1722){\makebox(0,0)[r]{\strut{}-1}}%
+      \put(946,2231){\makebox(0,0)[r]{\strut{}-0.5}}%
+      \put(946,2740){\makebox(0,0)[r]{\strut{} 0}}%
+      \put(946,3248){\makebox(0,0)[r]{\strut{} 0.5}}%
+      \put(946,3757){\makebox(0,0)[r]{\strut{} 1}}%
+      \put(946,4266){\makebox(0,0)[r]{\strut{} 1.5}}%
+      \put(946,4775){\makebox(0,0)[r]{\strut{} 2}}%
+      \put(1078,484){\makebox(0,0){\strut{} 0}}%
+      \put(1794,484){\makebox(0,0){\strut{} 500}}%
+      \put(2509,484){\makebox(0,0){\strut{} 1000}}%
+      \put(3225,484){\makebox(0,0){\strut{} 1500}}%
+      \put(3941,484){\makebox(0,0){\strut{} 2000}}%
+      \put(4656,484){\makebox(0,0){\strut{} 2500}}%
+      \put(5372,484){\makebox(0,0){\strut{} 3000}}%
+      \put(6087,484){\makebox(0,0){\strut{} 3500}}%
+      \put(6803,484){\makebox(0,0){\strut{} 4000}}%
+      \put(176,2739){\rotatebox{-270}{\makebox(0,0){\strut{}$\varphi$ [Grad]}}}%
+      \put(3940,154){\makebox(0,0){\strut{}$\omega$ [Hz]}}%
     }%
     \gplgaddtomacro\gplfronttext{%
       \csname LTb\endcsname%
-      \put(2706,4603){\makebox(0,0)[r]{\strut{}Messwerte}}%
+      \put(2398,4602){\makebox(0,0)[r]{\strut{}Messwerte}}%
+      \csname LTb\endcsname%
+      \put(2398,4382){\makebox(0,0)[r]{\strut{}f(x)}}%
     }%
     \gplbacktext
     \put(0,0){\includegraphics{phase}}%
