--- a/messung2.tex
+++ b/messung2.tex
@@ -86,20 +86,22 @@
       \put(1254,4324){\makebox(0,0)[r]{\strut{} 1.6}}%
       \put(1254,4776){\makebox(0,0)[r]{\strut{} 1.8}}%
       \put(1386,484){\makebox(0,0){\strut{} 0}}%
-      \put(2083,484){\makebox(0,0){\strut{} 500}}%
-      \put(2779,484){\makebox(0,0){\strut{} 1000}}%
-      \put(3476,484){\makebox(0,0){\strut{} 1500}}%
-      \put(4172,484){\makebox(0,0){\strut{} 2000}}%
-      \put(4869,484){\makebox(0,0){\strut{} 2500}}%
-      \put(5565,484){\makebox(0,0){\strut{} 3000}}%
-      \put(6262,484){\makebox(0,0){\strut{} 3500}}%
-      \put(6958,484){\makebox(0,0){\strut{} 4000}}%
+      \put(2083,484){\makebox(0,0){\strut{} 0.5}}%
+      \put(2779,484){\makebox(0,0){\strut{} 1}}%
+      \put(3476,484){\makebox(0,0){\strut{} 1.5}}%
+      \put(4172,484){\makebox(0,0){\strut{} 2}}%
+      \put(4869,484){\makebox(0,0){\strut{} 2.5}}%
+      \put(5565,484){\makebox(0,0){\strut{} 3}}%
+      \put(6262,484){\makebox(0,0){\strut{} 3.5}}%
+      \put(6958,484){\makebox(0,0){\strut{} 4}}%
       \put(484,2740){\rotatebox{90}{\makebox(0,0){\strut{}Impedanz [$\Omega$]}}}%
-      \put(4172,154){\makebox(0,0){\strut{}Kreisfrequenz [Hz]}}%
+      \put(4172,154){\makebox(0,0){\strut{}Kreisfrequenz [kHz]}}%
     }%
     \gplgaddtomacro\gplfronttext{%
       \csname LTb\endcsname%
       \put(5971,4603){\makebox(0,0)[r]{\strut{}Messwerte}}%
+      \csname LTb\endcsname%
+      \put(5971,4383){\makebox(0,0)[r]{\strut{}Fit}}%
     }%
     \gplbacktext
     \put(0,0){\includegraphics{messung2}}%
