Parallelkreis fit angefangen

--- a/messung3.tex
+++ b/messung3.tex
@@ -97,6 +97,8 @@
     \gplgaddtomacro\gplfronttext{%
       \csname LTb\endcsname%
       \put(5971,4603){\makebox(0,0)[r]{\strut{}Messwerte}}%
+      \csname LTb\endcsname%
+      \put(5971,4383){\makebox(0,0)[r]{\strut{}f(x)}}%
     }%
     \gplbacktext
     \put(0,0){\includegraphics{messung3}}%
