--- a/phase.tex
+++ b/phase.tex
@@ -101,6 +101,8 @@
       \put(2398,4602){\makebox(0,0)[r]{\strut{}Messwerte}}%
       \csname LTb\endcsname%
       \put(2398,4382){\makebox(0,0)[r]{\strut{}f(x)}}%
+      \csname LTb\endcsname%
+      \put(2398,4162){\makebox(0,0)[r]{\strut{}g(x)}}%
     }%
     \gplbacktext
     \put(0,0){\includegraphics{phase}}%
