--- a/spannungen.tex
+++ b/spannungen.tex
@@ -75,32 +75,34 @@
   \begin{picture}(7200.00,5040.00)%
     \gplgaddtomacro\gplbacktext{%
       \csname LTb\endcsname%
-      \put(1122,704){\makebox(0,0)[r]{\strut{} 0}}%
-      \put(1122,1383){\makebox(0,0)[r]{\strut{} 10}}%
-      \put(1122,2061){\makebox(0,0)[r]{\strut{} 20}}%
-      \put(1122,2740){\makebox(0,0)[r]{\strut{} 30}}%
-      \put(1122,3419){\makebox(0,0)[r]{\strut{} 40}}%
-      \put(1122,4097){\makebox(0,0)[r]{\strut{} 50}}%
-      \put(1122,4776){\makebox(0,0)[r]{\strut{} 60}}%
-      \put(1254,484){\makebox(0,0){\strut{} 0}}%
-      \put(1967,484){\makebox(0,0){\strut{} 500}}%
-      \put(2680,484){\makebox(0,0){\strut{} 1000}}%
-      \put(3393,484){\makebox(0,0){\strut{} 1500}}%
-      \put(4106,484){\makebox(0,0){\strut{} 2000}}%
-      \put(4819,484){\makebox(0,0){\strut{} 2500}}%
-      \put(5532,484){\makebox(0,0){\strut{} 3000}}%
-      \put(6245,484){\makebox(0,0){\strut{} 3500}}%
-      \put(6958,484){\makebox(0,0){\strut{} 4000}}%
-      \put(484,2740){\rotatebox{90}{\makebox(0,0){\strut{}Spannung [V]}}}%
-      \put(4106,154){\makebox(0,0){\strut{}$\omega$ [Hz]}}%
+      \put(814,704){\makebox(0,0)[r]{\strut{} 0}}%
+      \put(814,1383){\makebox(0,0)[r]{\strut{} 10}}%
+      \put(814,2061){\makebox(0,0)[r]{\strut{} 20}}%
+      \put(814,2740){\makebox(0,0)[r]{\strut{} 30}}%
+      \put(814,3418){\makebox(0,0)[r]{\strut{} 40}}%
+      \put(814,4097){\makebox(0,0)[r]{\strut{} 50}}%
+      \put(814,4775){\makebox(0,0)[r]{\strut{} 60}}%
+      \put(946,484){\makebox(0,0){\strut{} 0}}%
+      \put(1678,484){\makebox(0,0){\strut{} 0.5}}%
+      \put(2410,484){\makebox(0,0){\strut{} 1}}%
+      \put(3142,484){\makebox(0,0){\strut{} 1.5}}%
+      \put(3875,484){\makebox(0,0){\strut{} 2}}%
+      \put(4607,484){\makebox(0,0){\strut{} 2.5}}%
+      \put(5339,484){\makebox(0,0){\strut{} 3}}%
+      \put(6071,484){\makebox(0,0){\strut{} 3.5}}%
+      \put(6803,484){\makebox(0,0){\strut{} 4}}%
+      \put(176,2739){\rotatebox{-270}{\makebox(0,0){\strut{}Spannung [V]}}}%
+      \put(3874,154){\makebox(0,0){\strut{}$\omega$ [kHz]}}%
     }%
     \gplgaddtomacro\gplfronttext{%
       \csname LTb\endcsname%
-      \put(5971,4603){\makebox(0,0)[r]{\strut{}$U$}}%
+      \put(5816,4602){\makebox(0,0)[r]{\strut{}$U$}}%
       \csname LTb\endcsname%
-      \put(5971,4383){\makebox(0,0)[r]{\strut{}$U_{L+R}$}}%
+      \put(5816,4382){\makebox(0,0)[r]{\strut{}$U_{L+R}$}}%
       \csname LTb\endcsname%
-      \put(5971,4163){\makebox(0,0)[r]{\strut{}$U_{C}$}}%
+      \put(5816,4162){\makebox(0,0)[r]{\strut{}$U_{C}$}}%
+      \csname LTb\endcsname%
+      \put(5816,3942){\makebox(0,0)[r]{\strut{}$U_C$-Fit}}%
     }%
     \gplbacktext
     \put(0,0){\includegraphics{spannungen}}%
