--- a/messung2.tex
+++ b/messung2.tex
@@ -75,33 +75,33 @@
   \begin{picture}(7200.00,5040.00)%
     \gplgaddtomacro\gplbacktext{%
       \csname LTb\endcsname%
-      \put(1254,704){\makebox(0,0)[r]{\strut{} 0}}%
-      \put(1254,1156){\makebox(0,0)[r]{\strut{} 0.2}}%
-      \put(1254,1609){\makebox(0,0)[r]{\strut{} 0.4}}%
-      \put(1254,2061){\makebox(0,0)[r]{\strut{} 0.6}}%
-      \put(1254,2514){\makebox(0,0)[r]{\strut{} 0.8}}%
-      \put(1254,2966){\makebox(0,0)[r]{\strut{} 1}}%
-      \put(1254,3419){\makebox(0,0)[r]{\strut{} 1.2}}%
-      \put(1254,3871){\makebox(0,0)[r]{\strut{} 1.4}}%
-      \put(1254,4324){\makebox(0,0)[r]{\strut{} 1.6}}%
-      \put(1254,4776){\makebox(0,0)[r]{\strut{} 1.8}}%
-      \put(1386,484){\makebox(0,0){\strut{} 0}}%
-      \put(2083,484){\makebox(0,0){\strut{} 0.5}}%
-      \put(2779,484){\makebox(0,0){\strut{} 1}}%
-      \put(3476,484){\makebox(0,0){\strut{} 1.5}}%
-      \put(4172,484){\makebox(0,0){\strut{} 2}}%
-      \put(4869,484){\makebox(0,0){\strut{} 2.5}}%
-      \put(5565,484){\makebox(0,0){\strut{} 3}}%
-      \put(6262,484){\makebox(0,0){\strut{} 3.5}}%
-      \put(6958,484){\makebox(0,0){\strut{} 4}}%
-      \put(484,2740){\rotatebox{90}{\makebox(0,0){\strut{}Impedanz [$\Omega$]}}}%
-      \put(4172,154){\makebox(0,0){\strut{}Kreisfrequenz [kHz]}}%
+      \put(946,704){\makebox(0,0)[r]{\strut{} 0}}%
+      \put(946,1156){\makebox(0,0)[r]{\strut{} 0.2}}%
+      \put(946,1609){\makebox(0,0)[r]{\strut{} 0.4}}%
+      \put(946,2061){\makebox(0,0)[r]{\strut{} 0.6}}%
+      \put(946,2513){\makebox(0,0)[r]{\strut{} 0.8}}%
+      \put(946,2966){\makebox(0,0)[r]{\strut{} 1}}%
+      \put(946,3418){\makebox(0,0)[r]{\strut{} 1.2}}%
+      \put(946,3870){\makebox(0,0)[r]{\strut{} 1.4}}%
+      \put(946,4323){\makebox(0,0)[r]{\strut{} 1.6}}%
+      \put(946,4775){\makebox(0,0)[r]{\strut{} 1.8}}%
+      \put(1078,484){\makebox(0,0){\strut{} 0}}%
+      \put(1794,484){\makebox(0,0){\strut{} 0.5}}%
+      \put(2509,484){\makebox(0,0){\strut{} 1}}%
+      \put(3225,484){\makebox(0,0){\strut{} 1.5}}%
+      \put(3941,484){\makebox(0,0){\strut{} 2}}%
+      \put(4656,484){\makebox(0,0){\strut{} 2.5}}%
+      \put(5372,484){\makebox(0,0){\strut{} 3}}%
+      \put(6087,484){\makebox(0,0){\strut{} 3.5}}%
+      \put(6803,484){\makebox(0,0){\strut{} 4}}%
+      \put(176,2739){\rotatebox{-270}{\makebox(0,0){\strut{}Impedanz [k$\Omega$]}}}%
+      \put(3940,154){\makebox(0,0){\strut{}Kreisfrequenz [kHz]}}%
     }%
     \gplgaddtomacro\gplfronttext{%
       \csname LTb\endcsname%
-      \put(5971,4603){\makebox(0,0)[r]{\strut{}Messwerte}}%
+      \put(5816,4602){\makebox(0,0)[r]{\strut{}Messwerte}}%
       \csname LTb\endcsname%
-      \put(5971,4383){\makebox(0,0)[r]{\strut{}Fit}}%
+      \put(5816,4382){\makebox(0,0)[r]{\strut{}Fit}}%
     }%
     \gplbacktext
     \put(0,0){\includegraphics{messung2}}%
