--- a/Prohaupt.tex
+++ b/Prohaupt.tex
@@ -180,7 +180,7 @@ Praktikant: &  Michael Lohmann\\
 \end{figure}
 
 \begin{align}
-	L&=(386\pm 0.6)\,\si{\milli\henry}\\
+	L&=(386.3\pm 0.6)\,\si{\milli\henry}\\
 	R_\text{ges}&=(77.3 \pm 1.1)\,\si{\ohm}
 \end{align}
 \subsection{RLC-Serienschaltung}
@@ -193,10 +193,13 @@ Praktikant: &  Michael Lohmann\\
 
 \begin{align}
 	R &= (80.9 \pm 0.5)\,\si{\ohm}\\
-	L &= (386.053 \pm 1.0)\,\si{\milli\henry}\\
+	L &= (386.1 \pm 1.0)\,\si{\milli\henry}\\
 	C &= (1.799 \pm 0.005)\,\si{\micro\farad}
 \end{align}
-
+\begin{align}
+\overline L=(386.2 \pm 0.6)\si{\milli\henry}\\
+\overline R=(80.2836 \pm 0.455183)\,\si{\ohm}
+\end{align}
 \begin{figure}[!htb]
 	\centering
 	\input{phase.tex}
