--- a/phase.tex
+++ b/phase.tex
@@ -93,7 +93,7 @@
       \put(5372,484){\makebox(0,0){\strut{} 3}}%
       \put(6087,484){\makebox(0,0){\strut{} 3.5}}%
       \put(6803,484){\makebox(0,0){\strut{} 4}}%
-      \put(176,2739){\rotatebox{-270}{\makebox(0,0){\strut{}$\varphi$ [Grad]}}}%
+      \put(176,2739){\rotatebox{-270}{\makebox(0,0){\strut{}$\varphi$ [rad]}}}%
       \put(3940,154){\makebox(0,0){\strut{}$\omega$ [kHz]}}%
     }%
     \gplgaddtomacro\gplfronttext{%
