--- a/spannungen.tex
+++ b/spannungen.tex
@@ -91,7 +91,7 @@
       \put(5339,484){\makebox(0,0){\strut{} 3}}%
       \put(6071,484){\makebox(0,0){\strut{} 3.5}}%
       \put(6803,484){\makebox(0,0){\strut{} 4}}%
-      \put(176,2739){\rotatebox{-270}{\makebox(0,0){\strut{}Spannung [V]}}}%
+      \put(176,2739){\rotatebox{-270}{\makebox(0,0){\strut{}$U$ [V]}}}%
       \put(3874,154){\makebox(0,0){\strut{}$\omega$ [kHz]}}%
     }%
     \gplgaddtomacro\gplfronttext{%
