--- a/messung1.tex
+++ b/messung1.tex
@@ -75,34 +75,34 @@
   \begin{picture}(7200.00,5040.00)%
     \gplgaddtomacro\gplbacktext{%
       \csname LTb\endcsname%
-      \put(1254,704){\makebox(0,0)[r]{\strut{} 0}}%
-      \put(1254,1213){\makebox(0,0)[r]{\strut{} 0.2}}%
-      \put(1254,1722){\makebox(0,0)[r]{\strut{} 0.4}}%
-      \put(1254,2231){\makebox(0,0)[r]{\strut{} 0.6}}%
-      \put(1254,2740){\makebox(0,0)[r]{\strut{} 0.8}}%
-      \put(1254,3249){\makebox(0,0)[r]{\strut{} 1}}%
-      \put(1254,3758){\makebox(0,0)[r]{\strut{} 1.2}}%
-      \put(1254,4267){\makebox(0,0)[r]{\strut{} 1.4}}%
-      \put(1254,4776){\makebox(0,0)[r]{\strut{} 1.6}}%
-      \put(1386,484){\makebox(0,0){\strut{} 0}}%
-      \put(1943,484){\makebox(0,0){\strut{} 1}}%
-      \put(2500,484){\makebox(0,0){\strut{} 2}}%
-      \put(3058,484){\makebox(0,0){\strut{} 3}}%
-      \put(3615,484){\makebox(0,0){\strut{} 4}}%
-      \put(4172,484){\makebox(0,0){\strut{} 5}}%
-      \put(4729,484){\makebox(0,0){\strut{} 6}}%
-      \put(5286,484){\makebox(0,0){\strut{} 7}}%
-      \put(5844,484){\makebox(0,0){\strut{} 8}}%
-      \put(6401,484){\makebox(0,0){\strut{} 9}}%
-      \put(6958,484){\makebox(0,0){\strut{} 10}}%
-      \put(484,2740){\rotatebox{90}{\makebox(0,0){\strut{}Quadrat der Impedanz [(k$\Omega )^2$]}}}%
-      \put(4172,154){\makebox(0,0){\strut{}Quadrat der Kreisfrequenz [(kHz)$^2$]}}%
+      \put(946,704){\makebox(0,0)[r]{\strut{} 0}}%
+      \put(946,1213){\makebox(0,0)[r]{\strut{} 0.2}}%
+      \put(946,1722){\makebox(0,0)[r]{\strut{} 0.4}}%
+      \put(946,2231){\makebox(0,0)[r]{\strut{} 0.6}}%
+      \put(946,2740){\makebox(0,0)[r]{\strut{} 0.8}}%
+      \put(946,3248){\makebox(0,0)[r]{\strut{} 1}}%
+      \put(946,3757){\makebox(0,0)[r]{\strut{} 1.2}}%
+      \put(946,4266){\makebox(0,0)[r]{\strut{} 1.4}}%
+      \put(946,4775){\makebox(0,0)[r]{\strut{} 1.6}}%
+      \put(1078,484){\makebox(0,0){\strut{} 0}}%
+      \put(1651,484){\makebox(0,0){\strut{} 1}}%
+      \put(2223,484){\makebox(0,0){\strut{} 2}}%
+      \put(2796,484){\makebox(0,0){\strut{} 3}}%
+      \put(3368,484){\makebox(0,0){\strut{} 4}}%
+      \put(3941,484){\makebox(0,0){\strut{} 5}}%
+      \put(4513,484){\makebox(0,0){\strut{} 6}}%
+      \put(5086,484){\makebox(0,0){\strut{} 7}}%
+      \put(5658,484){\makebox(0,0){\strut{} 8}}%
+      \put(6231,484){\makebox(0,0){\strut{} 9}}%
+      \put(6803,484){\makebox(0,0){\strut{} 10}}%
+      \put(176,2739){\rotatebox{-270}{\makebox(0,0){\strut{}$Z^2$ [(k$\Omega )^2$]}}}%
+      \put(3940,154){\makebox(0,0){\strut{}$\omega^2$ [(kHz)$^2$]}}%
     }%
     \gplgaddtomacro\gplfronttext{%
       \csname LTb\endcsname%
-      \put(3762,4603){\makebox(0,0)[r]{\strut{}Messwerte}}%
+      \put(3454,4602){\makebox(0,0)[r]{\strut{}Messwerte}}%
       \csname LTb\endcsname%
-      \put(3762,4383){\makebox(0,0)[r]{\strut{}Regressionsgerade}}%
+      \put(3454,4382){\makebox(0,0)[r]{\strut{}Regressionsgerade}}%
     }%
     \gplbacktext
     \put(0,0){\includegraphics{messung1}}%
