--- a/messung3.tex
+++ b/messung3.tex
@@ -91,8 +91,8 @@
       \put(5372,484){\makebox(0,0){\strut{} 3}}%
       \put(6087,484){\makebox(0,0){\strut{} 3.5}}%
       \put(6803,484){\makebox(0,0){\strut{} 4}}%
-      \put(176,2739){\rotatebox{-270}{\makebox(0,0){\strut{}Impedanz [$\Omega$]}}}%
-      \put(3940,154){\makebox(0,0){\strut{}Kreisfrequenz [kHz]}}%
+      \put(176,2739){\rotatebox{-270}{\makebox(0,0){\strut{}$Z$ [k$\Omega$]}}}%
+      \put(3940,154){\makebox(0,0){\strut{}$\omega$ [kHz]}}%
     }%
     \gplgaddtomacro\gplfronttext{%
       \csname LTb\endcsname%
