--- a/Prohaupt.tex
+++ b/Prohaupt.tex
@@ -162,7 +162,7 @@ Praktikant: &  Michael Lohmann\\
 
 \section{Einleitung}
 \label{sec:einleitung}
-\cite{LP14}
+\cite{LP14}Das hier aber nicht!
 \section{Theorie}
 \label{sec:theorie}
                                                                                                                                                                       
