--- a/Prohaupt.tex
+++ b/Prohaupt.tex
@@ -162,12 +162,15 @@ Praktikant: &  Michael Lohmann\\
 
 \section{Einleitung}
 \label{sec:einleitung}
-\cite{LP14}Das hier aber nicht!
+Wechselströme spielen in der modernen Energieversorgung eine zentrale Rolle.
+Um so wichtiger ist es für die Effizienz, die genauen Eigenschaften von \emph{Wechselstrom-Widerständen} zu kennen.
+Dies soll in diesem Versuch erziehlt werden.\cite{LP14}
 \section{Theorie}
 \label{sec:theorie}
                                                                                                                                                                       
 \section{Durchführung}
 \label{sec:durchfuehrung}
+
 
 \section{Auswertung}
 \label{sec:auswertung}
