--- a/Prohaupt.tex
+++ b/Prohaupt.tex
@@ -136,9 +136,8 @@
 \begin{Large}
 \begin{tabular}{ll}
 Praktikant: &  Michael Lohmann\\
- &  Felix Kurtz\\
+ Mitpraktikant &  Felix Kurtz\\
  E-Mail: & m.lohmann@stud.uni-goettingen.de\\
- &  felix.kurtz@stud.uni-goettingen.de\\
  Betreuer: & Björn Klaas\\
  Versuchsdatum: & 08.09.2014\\
 \end{tabular}
@@ -149,7 +148,7 @@ Praktikant: &  Michael Lohmann\\
 \begin{Large}
 \fbox{
   \begin{minipage}[t][2.5cm][t]{6cm} 
-    Testat:
+Eingegangen am:
   \end{minipage}
 }
 \end{Large}
