--- a/Prohaupt.tex
+++ b/Prohaupt.tex
@@ -195,8 +195,16 @@ U_0\cdot\sin(\omega t)&=L\frac{dI}{dt}\\
 \end{align*}
 Dies bedeutet, dass die Phasenverschiebung für eine Schaltung, welche nur aus einer Spule bestehent, $\varphi=\frac{\pi}{2}$ beträgt.
 
+Man kann nun den \emph{Blindwiderstand} für eine Spule definieren:
+\begin{align}
+X_L=\frac{U(t)}{I(t)}=iL\omega
+\end{align}
+
+
 
 \subsection{Kapazität}
+Ein Kondensator hat analog zu einer Spule 
+
 
 \subsection{$RLC$-Serienschaltung}
 \label{sec:RLC}
