--- a/Prohaupt.tex
+++ b/Prohaupt.tex
@@ -219,8 +219,8 @@ X_C:=\frac{U(t)}{I(t)}=-\frac{1}{\omega C}
 \label{sec:RLC}
 \begin{figure}[!h]
 \centering
-\includegraphics[width=0.7\linewidth]{serie}
-\caption{Schaltplan der Serienschaltung}
+\includegraphics[width=0.6\linewidth]{serie}
+\caption{Schaltplan der Serienschaltung von \cite[4.10.2014, 15:30]{LP14}.}
 \label{fig:serienschaltung}
 \end{figure}
 Ein $RLC$-Serienschaltkreis wie in Abb. \ref{fig:serienschaltung} muss nun aus einer Zusammensetzung der beiden erfolgen.
@@ -236,6 +236,20 @@ berechnen.
 
 \subsection{$LC$-Parallelschaltung}
 \label{sec:LC}
+\begin{figure}[!h]
+\centering
+\includegraphics[width=0.6\linewidth]{parallel}
+\caption{Schaltplan der Parallelschaltung von \cite[4.10.2014, 15:30]{LP14}.}
+\label{fig:parallel}
+\end{figure}
+
+\subsection{Impedanz}
+\begin{figure}[!h]
+\centering
+\input{zeiger.pdf_tex}
+\caption{Zeigerdiagramm, welches die Realteile der Spannung gegen ihren Imaginärteil aufträgt.}
+\label{fig:zeiger}
+\end{figure}
 
 \section{Durchführung}
 \label{sec:durchfuehrung}
